<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


   <EditText
       android:id="@+id/edit_text"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textAlignment="center"
       android:contentDescription="Input text"
       android:hint="@string/edit_hint"
       android:inputType="text"/>

   <EditText
       android:id="@+id/repeat"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/edit_text"
       android:hint="@string/repeat"
       android:inputType="number"
       android:textAlignment="center"
       />

   <Button
       android:id="@+id/button"
       android:layout_below="@id/repeat"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button"
       android:layout_centerInParent="true"/>

   <Button
       android:id="@+id/copy"
       android:layout_below="@+id/button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/copy"
       android:layout_centerInParent="true"
       />

   <Button
       android:id="@+id/clear"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/clear"
       android:layout_centerInParent="true"
       android:layout_below="@id/copy"
       />

   <Button
       android:id="@+id/share_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/clear"
       android:layout_centerInParent="true"
       android:text="@string/share_word"
       />


   <EditText
       android:id="@+id/output"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:textSize="20sp"
       android:gravity="start"
       android:layout_below="@id/copy"
       android:layout_alignParentStart="true"
       android:inputType="textMultiLine"/>

</RelativeLayout>